src/App.css
.App {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: auto;
  height: 3286px;
}
/* HEADER START*/

/* Heaer Top*/
.header-mainbox {
  width: 1440px;
  height: 671px;
}

.header-top {
  display: flex;
}

.header-top-left {
  background-color: #4731d3;
  width: 1008px;
  height: 148px;
}

.header-top-left .name {
  color: #cbf281;
  font-weight: bold;
  font-size: 32px;
  margin-left: 239px;
  margin-top: 2px;
  width: fit-content;
}

.header-top-left .language {
  width: 138px;
  height: 18px;
  margin-left: 851px;
  margin-top: 35px;
  cursor: pointer;
  text-align-last: right;
}

.header-top-right {
  width: 432px;
  height: 148px;
  background-color: #cbf281;
}

.light-dark {
  display: flex;
  flex-direction: row;
  margin-left: 18px;
  margin-top: 32px;
  gap: 9px;
}

.slider.round {
  width: 50px;
  height: 24px;
}

.mode-text {
  color: #4731d3;
  width: 103px;
  height: 18px;
  font-weight: 700;
}

.toggle-switch {
  display: flex;
  width: 55px;
  height: 24px;
  transform: matrix(-1, 0, 0, 1, 0, 0);
}

.toggle-switch-checkbox {
  display: none;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 5px;
  bottom: 0;
  background-color: #8f88ff;
  transition: 0.4s;
  border-radius: 24px;
}

.slider:before {
  position: absolute;
  content: "";
  height: 18px;
  width: 18px;
  left: 3px;
  bottom: 3px;
  background-color: #ffe86e;
  transition: 0.6s;
  border-radius: 50%;
}
.slider:after {
  position: absolute;
  content: "";
  height: 14px;
  width: 14px;
  left: 3px;
  bottom: 3px;
  background-color: #ffe86e;
  transition: 0.6s;
  border-radius: 50%;
  transform: translateX(0px) translateY(-2px);
}

.toggle-switch-checkbox:checked + .slider {
  background-color: #3a3a3a;
}

.toggle-switch-checkbox:checked + .slider:before {
  transform: translateX(26px);
}

.toggle-switch-checkbox:checked + .slider:after {
  transform: translateX(22px) translateY(-2px);
  background-color: #3a3a3a;
}

/* Header top end*/

/*Header mid*/

.header-mid {
  display: flex;
  flex-direction: row;
  background-color: #cbf281;
}

.header-mid-left {
  background-color: #4731d3;
  width: 1200px;
  height: 376px;
  display: flex;
  border-top-right-radius: 18px;
  border-bottom-right-radius: 18px;
  /* overflow: hidden; */
}

.hero {
  display: flex;
  flex-direction: column;
  margin-left: 239px;
  width: 528px;
}

.hero h1 {
  width: 529px;
  line-height: 50px;
  font-size: 54px;
  font-weight: bold;
  padding-top: 76px;
  color: #cbf281;
}

.hero p {
  width: 529px;
  height: 58px;
  padding-top: 36px;
  padding-bottom: 77px;
  color: #ffffff;
  font-size: 24px;
  font-weight: 400;
}

.visit-buttons {
  display: flex;
  margin-top: 36px;
  gap: 12px;
  width: 278px;
}

.header-mid-left img {
  width: 350px;
  height: 376px;
  border-radius: 18px;
  margin-left: 83px;
  background-color: #cbf281;
  object-fit: cover;
}

.header-mid-right {
  width: 240px;
  height: 376px;
  background-color: #cbf281;
}

/*Header mid end*/

/*Header bottom start*/

.header-bottom {
  display: flex;
  flex-direction: row;
}
.header-bottom-left {
  background-color: #4731d3;
  width: 1008px;
  height: 147px;
}

.header-bottom-right {
  height: 147px;
  width: 432px;
  background-color: #cbf281;
}

/*Header bottom end*/

/* HEADER END*/

/*SKILLS START*/

.skills-mainbox {
  width: 1440px;
  height: 610px;
}

.skill-elements {
  display: flex;
  flex-direction: row;
  width: 960px;
  height: 430px;
  margin: 84px 241px 96px 239px;
  background-color: #ffffff;
}

.skill-elements .skill-title h2 {
  width: 200px;
  height: 58px;
  font-size: 48px;
  font-weight: 700;
  color: #4832d3;
  margin-top: 30px;
}

.img1 {
  margin-left: 50px;
  width: 290px;
  height: 430px;
  object-fit: cover;
}

.img2 {
  margin-left: 120px;
  width: 251px;
  height: 430px;
  object-fit: cover;
}
/*SKILLS END*/

/*PROFILE START*/

/*Basic info start*/

.profile-mainbox {
  width: 1440px;
  height: 552px;
  background-color: #4731d3;
}

.profile-title {
  margin-top: 84px;
  margin-left: 240px;
  color: #cbf281;
  font-weight: 700;
  font-size: 48px;
  line-height: 48px;
}

.profile-elements {
  display: flex;
  flex-direction: row;
  width: 960px;
  height: 291px;
  margin-top: 33px;
  margin-left: 240px;
}

.basic-info h4 {
  width: 300px;
  height: 28px;
  color: #ffffff;
  font-size: 30px;
  font-weight: 500;
  line-height: 28px;
}

.basic-info .info {
  display: flex;
  flex-direction: row;
  gap: 10px;
}

.basic-info .questions {
  display: flex;
  flex-direction: column;
  width: 101px;
  height: 222px;
  margin-top: 24px;
  gap: 24px;
}

.basic-info .questions p {
  font-size: 16px;
  line-height: 24px;
  font-weight: 600;
  color: #cbf281;
}

.basic-info .answers {
  display: flex;
  flex-direction: column;
  width: 189px;
  height: 222px;
  margin-top: 24px;
  gap: 24px;
}

.basic-info .answers p {
  font-size: 16px;
  font-weight: 400;
  line-height: 24px;
  color: #ffffff;
}

/*Basic info end*/

/*Profile Image start*/

.profile-elements img {
  margin: 0 30px 0 30px;
  width: 300px;
  height: 290px;
  border-radius: 10px;
  object-fit: cover;
}

/*Profile Image end*/

/*About start*/
.about {
  display: flex;
  flex-direction: column;
}

.about h4 {
  width: 300px;
  height: 25px;
  color: #ffffff;
  font-size: 30px;
  font-weight: 500;
  line-height: 30px;
}

.about .lorem {
  display: flex;
  flex-direction: column;
  width: 300px;
  height: 242px;
  margin-top: 24px;
  /* align-content: space-between; */
  gap: 24px;
}

.lorem p {
  color: #ffffff;
  font-size: 18px;
  font-weight: 400;
  line-height: 27px;
  font-style: normal;
}

/*About end*/

/*PROFILE END*/

/*PROJECTS START*/

.projects-mainbox {
  width: 1440px;
  height: 999px;
  background-color: #cbf281;
}

.projects-mainbox h2 {
  color: #4731d3;
  font-size: 48px;
  font-weight: 700;
  line-height: 48px;
  width: 198px;
  height: 48px;
  margin: 84px 1002px 27px 240px;
}

.project-box {
  display: flex;
  flex-direction: row;
  width: 960px;
  height: 360px;
  margin: 27px 240px 36px 240px;
}

.project-box img {
  width: 360px;
  height: 360px;
  border-radius: 12px 0px 0px 12px;
  object-fit: none;
  border-right: 1px solid #d2d2d2;
}

.project-explanation {
  display: flex;
  flex-direction: column;
  width: 600px;
  height: 360px;
  background-color: #ffffff;
  border-radius: 0px 12px 12px 0px;
}

.project-explanation h4 {
  margin: 56.5px 32px 24px 48px;
  width: 520px;
  height: 32px;
  font-size: 32px;
  font-weight: 700;
  line-height: 32px;
  font-style: normal;
  color: #4338ca;
}

.project-explanation p {
  width: 520px;
  height: 100px;
  line-height: 20px;
  font-size: 16px;
  font-weight: 400;
  color: #383838;
  margin: 0px 32px 24px 48px;
}

.button-box {
  display: flex;
  flex-direction: row;
  width: 296px;
  height: 31px;
  gap: 6px;
  align-items: flex-start;
  padding: 0;
  margin-bottom: 24px;
  margin-left: 48px;
}

.button-box button {
  background-color: #4731d3;
  color: #ffffff;
  border: none;
  width: 71px;
  height: 31px;
  border-radius: 23px;
  font-size: 14px;
  line-height: 14px;
  font-weight: 500;
}

.project-links {
  width: 181px;
  height: 12px;
  display: flex;
  flex-direction: row;
  gap: 45px;
  margin-left: 48px;
  font-size: 16px;
  font-weight: 500;
  line-height: 16px;
}

.project-links a {
  color: #120b39;
}

.project-box.down {
  margin-top: 36px;
}

.project-box.down img {
  object-fit: fill;
}
/*PROJECTS END*/

/*FOOTER START*/

.footer-mainbox {
  width: 1440px;
  height: 454px;
  background-color: #f9f9f9;
}

.contact-box {
  width: 483px;
  height: 290px;
  margin: 84px 478px 80px 479px;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0;
  gap: 24px;
}

.contact-box h2 {
  /* width: 100%; */
  height: 72px;
  font-size: 48px;
  font-weight: 700;
  line-height: 72px;
  color: #4731d3;
}

.contact-box .motto {
  width: 448px;
  height: 72px;
  font-size: 24px;
  font-weight: 400;
  line-height: 36px;
  margin-left: 17.5px;
  color: #120b39;
}

.contact-box .email {
  width: 269px;
  height: 24px;
  font-weight: 500;
  font-size: 20px;
  line-height: 24.2px;
}

.contact-box a {
  color: #4731d3;
}

.social-box {
  width: 212px;
  height: 35px;
  display: flex;
  flex-direction: row;
}

/*FOOTER END*/

